--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.15.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
     "@mui/styled-engine-sc": "^7.0.1",
     "axios": "^1.8.4",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.6.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
